--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -4,12 +4,12 @@
 
 * {
   background-color: #d2e0fb;
-  box-sizing: border-box;
 }
 h1 {
-  color: white;
+  color: #FAF9F6;
   text-align: center;
-  font-size: xx-large;
+  font-size: 4rem;
+  text-shadow: 0px 0px 5px black;
 }
 
 h2 {
@@ -34,4 +34,11 @@ body {
 nav {
   display: flex;
   justify-content: right;
+}
+
+.Game-Keyboard-Container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
