--- a/front-end/src/css/leaderboard.css
+++ b/front-end/src/css/leaderboard.css
@@ -1,6 +1,11 @@
+body {
+  padding: 50px;
+}
+
 .table-container {
   margin-top: 2vh;
 }
+
 .scoreboard {
   width: 100%;
   height: 50vh;
@@ -11,10 +16,13 @@
   border: 1px solid black;
   background-color: #c96868;
 }
+
 .table-body {
+  
   border: 1px solid #2e2e2e;
   background-color: #7eacb5;
 }
+
 .leaderboard-header {
   color: rgb(30, 29, 29);
   text-align: center;
