--- a/front-end/src/css/App.css
+++ b/front-end/src/css/App.css
@@ -5,11 +5,19 @@
   font-family: 'Quicksand'
 }
 
+.header {
+  text-align: center;
+}
 h1 {
+  border: 4px solid black;
   color: #232323;
   text-align: center;
   font-size: 4rem;
   font-weight: 500px;
+  background-color: #078080;
+  border-radius: 30px;
+  display: inline-block;
+  padding:10px
 }
 
 h2 {
