--- a/front-end/src/css/App.css
+++ b/front-end/src/css/App.css
@@ -1,13 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap');
 
 * {
   background-color: #f8f5f2;
   font-family: 'Quicksand'
 }
 
+
+
 .header {
   text-align: center;
 }
+
 h1 {
   border: 4px solid black;
   color: #232323;
@@ -15,9 +19,23 @@ h1 {
   font-size: 4rem;
   font-weight: 500px;
   background-color: #078080;
-  border-radius: 30px;
+  border-radius: 60px;
   display: inline-block;
-  padding:10px
+  padding: 25px
+}
+
+.welcome-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0px;
+}
+
+p {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 h2 {
@@ -26,6 +44,7 @@ h2 {
   color: red;
 }
 
+
 body {
   font-family: "Lato", sans-serif;
   transition: 0.2s;
@@ -33,18 +52,15 @@ body {
 }
 
 .link {
-color: #232323;
+  color: #232323;
   margin: 10px;
   font-size: large;
   display: inline-block;
   background-color: #f45d48;
   font-weight: bold;
   text-decoration: none;
-  /* Remove underline */
   border: 1px solid black;
-  /* Set border to black */
   border-radius: 12px;
-  /* Rounded edges */
   padding: 10px;
 }
 
@@ -53,4 +69,5 @@ color: #232323;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 0px;
 }
