--- a/front-end/src/css/WordGame.css
+++ b/front-end/src/css/WordGame.css
@@ -1,5 +1,5 @@
 .word-game {
-  margin-top: 30px;
+  margin-top: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -24,12 +24,13 @@
   border: 4px solid #078080;
   width: 100%;
   height: auto;
-  max-height: 300px;
+  max-height: 350px;
   overflow: hidden;
   padding: 4px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  border-radius: 60px;
 }
 
 .input-field {
@@ -40,6 +41,7 @@
 
 .test {
   background-color: #f8f5f2;
+  padding: 15px;
 }
 
 .text-field {
@@ -49,6 +51,11 @@
 .start-game-text {
   background-color: #f8f5f2;
   color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 10px;
 }
 
 .stats-return {
@@ -120,6 +127,7 @@ button {
 
 .controls-container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -131,14 +139,65 @@ button {
 .time-r {
   background-color: #f8f5f2;
   padding: 10px 20px;
-  border: 1px solid black;
-  border-radius: 15px;
   margin: 0 5px;
-  flex: 1;
   text-align: center;
   color: black;
+  border: 0px solid;
+  font-size: 20px;
+  font-weight: bold;
+  flex: 2;
+  border-radius: 60px;
+}
+
+.Refresh,
+.DropDown {
+  background-color: #f45d48;
 }
 
 .time-r {
-  flex: 2;
+  flex: 7;
+}
+
+.timer-bar {
+  height: 20px;
+  background-color: #078080;
+  transition: width 1s linear;
+  border-radius: 10px;
+  margin: 10px 0;
+}
+
+.stats-in-text-box {
+  border-radius: 15px;
+  padding: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.stats-in-text-box p {
+  margin: 5px 0;
+  font-size: 2rem;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  width: calc(100% - 20px);
+  box-sizing: border-box;
+  line-height: 1.5;
+  border-radius: 100px;
+}
+
+.stats-in-text-box p:nth-child(1) {
+  background-color: rgba(6, 90, 158, 0.8);
+}
+
+.stats-in-text-box p:nth-child(2) {
+  background-color: rgba(18, 119, 159, 0.8);
+}
+
+.stats-in-text-box p:nth-child(3) {
+  background-color: rgba(30, 148, 159, 0.8);
+}
+
+.stats-in-text-box p:nth-child(4) {
+  background-color: rgba(42, 175, 159, 0.8);
 }
