--- a/front-end/src/css/MyProfile.css
+++ b/front-end/src/css/MyProfile.css
@@ -25,7 +25,7 @@ header {
 .welcome-message {
     font-size: 2.5rem;
     font-weight: bold;
-    color: white;
+    color: black;
     /* Changed text color to white for contrast */
     text-align: center;
     margin-bottom: 1.5rem;
