--- a/front-end/src/css/MyProfile.css
+++ b/front-end/src/css/MyProfile.css
@@ -1,34 +1,28 @@
-/* MyProfile.css */
 .profile-container {
-    max-width: 800px;
     margin: 2rem auto;
     padding: 1.5rem;
     border-radius: 0.5rem;
+    width: 100%;
 }
 
 header {
     background-color: #078080;
-    /* Set the background color of the header */
     color: white;
-    /* Changed text color for better contrast */
     padding: 1rem;
-    /* Optional: Add padding for better spacing */
     border-radius: 0.5rem;
-    /* Optional: Ensure the corners are rounded */
 }
 
 .username {
     color: white;
-    /* Updated to ensure consistency */
 }
 
 .welcome-message {
     font-size: 2.5rem;
     font-weight: bold;
     color: white;
-    /* Changed text color to white for contrast */
     text-align: center;
     margin-bottom: 1.5rem;
+    width: 100%;
 }
 
 .profile-image-container {
@@ -39,22 +33,29 @@ header {
 
 .profile-content {
     display: flex;
-    align-items: flex-start;
-    /* Align items to the start for better visual hierarchy */
+    flex-direction: column;
+    align-items: center;
     gap: 1.5rem;
-    /* Space between profile and stats */
     flex-wrap: wrap;
-    /* Allow items to wrap on smaller screens */
     justify-content: center;
-    /* Center align the contents */
 }
 
-/* Additional styles for profile card and stats card */
 .profile-card-container {
-    flex: 1;
-    /* Allow the profile card to grow */
-    min-width: 250px;
-    /* Minimum width for better responsiveness */
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.profile-card {
+    width: 75vmax;
+    justify-content: center;
+    align-items: center;
+}
+
+.player-stats-card {
+    width: 75vmax;
+
 }
 
 .edit-profile-button {
@@ -67,6 +68,8 @@ header {
     transition: box-shadow 0.3s;
     margin-top: 1rem;
     cursor: pointer;
+    align-items: center;
+    justify-content: center;
 }
 
 .edit-profile-button:hover {
@@ -74,10 +77,7 @@ header {
 }
 
 .player-stats-container {
-    flex: 1;
-    /* Allow the stats container to grow */
     min-width: 250px;
-    /* Minimum width for better responsiveness */
 }
 
 .logout-button,
