--- a/front-end/src/css/MyProfile.css
+++ b/front-end/src/css/MyProfile.css
@@ -26,6 +26,7 @@ header {
 }
 
 .profile-image-container {
+    width:100%;
     display: flex;
     justify-content: center;
     margin-bottom: 1.5rem;
