--- a/front-end/src/css/MyProfile.css
+++ b/front-end/src/css/MyProfile.css
@@ -40,6 +40,7 @@ header {
     gap: 1.5rem;
     flex-wrap: wrap;
     justify-content: center;
+    margin-left: 30px;
 }
 
 .profile-card-container {
